--- a/index.html
+++ b/index.html
@@ -92,6 +92,91 @@
       </button>
     </div>
   </div>
+
+  <section id="blog">
+    <div class="sec-head text-center pt-5 ">
+        <h1>BLOG</h1>
+        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    <div class=" container-md container-fluid-sm m-auto py-5">
+        <div class="d-flex row  flex-row bd-highlight ">
+            <div class="p-md-3 p-sm-1 col-lg-4 bd-highlight ">
+                <div class="card shadow">
+                    <img src="images/post-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body p-3">
+                        <div class="card-relat bg-primary px-3 py-1 text-white border border-primary rounded-pill">Travel</div>
+                        <h5 class="card-title pt-2">See more ideas about Travel</h5>
+                        <p class="card-text">
+                            Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                            massa, convallis a pellentesque nec, egestas non nisi.</p>
+                    </div>
+                    <div class="card-body d-flex flex-row border-top px-3 py-2">
+                        <div>
+                           
+                            <a href="#" class="card-link"> Morgan Freeman</a>
+                        </div>
+                        <div class="ms-auto p-2 bd-highlight ">
+                            <i class="fa fa-clock"></i> 10 min
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-md-3 p-sm-1 col-lg-4 bd-highlight">
+                <div class="card shadow ">
+                    <img src="images/post-2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body p-3">
+                        <div class="card-relat bg-primary px-3 py-1 text-white border border-primary rounded-pill">Travel</div>
+                        <h5 class="card-title pt-2">See more ideas about Travel</h5>
+                        <p class="card-text">
+                            Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                            massa, convallis a pellentesque nec, egestas non nisi.</p>
+                    </div>
+                    <div class="card-body d-flex flex-row border-top px-3 py-2">
+                        <div >
+                           
+                            <a href="#" class="card-link"> Morgan Freeman</a>
+                        </div>
+                        <div class="ms-auto p-2 bd-highlight  ">
+                          <i class="fa fa-clock"></i> 10 min
+                      </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-md-3 p-sm-1 col-lg-4 bd-highlight ">
+                <div class="card shadow">
+                    <img src="images/post-3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body p-3">
+                        <div class="card-relat bg-primary px-3 py-1 text-white border border-primary rounded-pill">Travel</div>
+                        <h5 class="card-title pt-2">See more ideas about Travel</h5>
+                        <p class="card-text">
+                            Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien
+                            massa, convallis a pellentesque nec, egestas non nisi.</p>
+                    </div>
+                    <div class="card-body d-flex  flex-row border-top px-3 py-2">
+                        <div >
+                            <a href="#" class="card-link"> Morgan Freeman</a>
+                        </div>
+                        <div class="ms-auto p-2 bd-highlight  ">
+                            <i class="fa fa-clock"></i> 10 min
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
+
+
+
+
+
+
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
 </body>
