--- a/index.html
+++ b/index.html
@@ -173,6 +173,143 @@
 
 
 
+<!-- ahmed galal -->
+<section id="services">
+  <div class="bg-serv p-5">
+
+  <div class="heading position-relative text-center">
+    <h2 class=" pt-5 fs-8 fw-bold">Services</h2>
+    <br>
+    <div class="hr m-auto"></div>
+    <p class="w-50 m-auto fs-5 text-muted">Nullam ac enim auctor, fringilla risus at, imperdiet turpis. Pellentesque elementum libero enim, eget gravida nunc laoreet et. Pellentesque elementum libero enim.</p>
+    <br>
+    <br>
+  </div>
+
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-4 col-sm-6">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-laptop-code"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Responsive Layout</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-pen-ruler"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Modern Design</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-brands fa-font-awesome"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Font Awesome Icons</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-address-card"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Ajax Portfolio</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-gear"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Color Options</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-headphones"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Audio Support</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-list-ul"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Well Documented</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-solid fa-video"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Background Videos</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-sm-6 ">
+        <div class="item d-flex">
+          <div class="icon text-danger fs-3 px-3">
+            <i class="fa-brands fa-mixer"></i>
+          </div>
+          <div class="cotent p-2">
+            <h5>Intro Slider</h5>
+            <p class="text-muted">Ferri reque integre mea ut, eu eos vide errem noluise se. Putent laoreet et ius utroque dissentias ut.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+
+  
+
+
+</section>
+
+
+
 
 
 
